Simplify web service build context in docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   web: 
-    build:
-      context: .
-      target: builder
+    build: '.'
     stop_signal: SIGINT
     ports:
       - '5002:5002'
